<resources>
    <string name="app_name">Track Me</string>

    <string name="title_save_session_confirmation">Complete</string>
    <string name="msg_save_session_confirmation">Do you want to close the activity?</string>
    <string name="msg_save_session_warning">Your activity has not been saved, please press the Finish button to save your activity</string>
    <string name="msg_permission_denied">App need access device\'s location</string>
    <string name="open_setting">Open settings</string>

    <string name="empty" />

    <string name="title_home">Home</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_about">About</string>
    <string name="title_session_detail">Session</string>

    <string name="distance_km_unit">%.2f km</string>
    <string name="speed_kmh_unit">%.2f km/h</string>
    <string name="no_data">No data</string>
    <string name="distance">Distance</string>
    <string name="total_time">Total time</string>
    <string name="current_speed">Current Speed</string>
    <string name="avg_speed">Average Speed</string>

    <string name="got_it">Got it</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Continue</string>
    <string name="finish">Finish</string>
    <string name="close_without_save_session">Close session</string>
    <string name="save_and_close_session">Save &amp; exit</string>
</resources>