<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nchungdev.trackme.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/recordFragment"
        android:name="com.nchungdev.trackme.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.nchungdev.trackme.ui.about.AboutFragment"
        android:label="@string/title_about" />
</navigation>